...
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="set_title_text">Set title</string>
    <string name="language_input_text">Language input</string>
    <string name="language_output_text">Language output</string>
    <string name="add_text_on_button">Add</string>
    <string name="fill_in_both_lines">Fill in both lines</string>
    <string name="add_set_button_text">Add set button</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="no_data_available">No set available</string>
...
